<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg_login_top"
tools:context=".view.sign_in.SignInAct">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#0F0F0F"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text_rounded"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            tools:autofillHints="@string/login_username_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text_rounded"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            tools:autofillHints="@string/login_password_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/button_sign_in"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/login_sign_in_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/button_sign_in"
            app:layout_constraintEnd_toEndOf="@id/button_sign_in"
            app:layout_constraintTop_toTopOf="@id/button_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_in"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/text_view_version_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="28dp"
        android:text="@string/login_version_app_text"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp" />

</LinearLayout>

</android.support.constraint.ConstraintLayout>