<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/image_view_outlet"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/item_customer_photo_outlet_description"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_login_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ProgressBar
                android:id="@+id/progress_bar_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/image_view_outlet"
                app:layout_constraintEnd_toEndOf="@id/image_view_outlet"
                app:layout_constraintStart_toStartOf="@id/image_view_outlet"
                app:layout_constraintTop_toTopOf="@id/image_view_outlet"/>

            <ImageView
                android:id="@+id/image_view_coutlet_distributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/item_customer_distributor_description"
                android:src="@drawable/ic_distributor"
                app:layout_constraintStart_toEndOf="@id/image_view_outlet"
                app:layout_constraintTop_toTopOf="@id/image_view_outlet" />

            <TextView
                android:id="@+id/text_view_coutlet_distributors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="4sp"
                android:layout_marginTop="4dp"
                android:text="@string/item_customer_distributor_text"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/image_view_coutlet_distributor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_view_coutlet_distributor"/>


            <TextView
                android:id="@+id/text_view_coutlet_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/item_customer_outlet_name_text"
                android:textColor="@color/colorTextDark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_coutlet_distributor"
                app:layout_constraintEnd_toEndOf="@id/text_view_coutlet_distributors"
                app:layout_constraintTop_toBottomOf="@id/text_view_coutlet_distributors"/>

            <ImageView
                android:id="@+id/image_view_coutlet_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:contentDescription="@string/item_customer_distributor_description"
                android:src="@drawable/ic_address"
                app:layout_constraintStart_toStartOf="@id/text_view_coutlet_name"
                app:layout_constraintTop_toBottomOf="@id/text_view_coutlet_name" />

            <TextView
                android:id="@+id/text_view_outlet_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginTop="4sp"
                android:text="@string/item_customer_outlet_address_text"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/image_view_coutlet_address"
                app:layout_constraintEnd_toEndOf="@id/text_view_coutlet_name"
                app:layout_constraintTop_toTopOf="@id/image_view_coutlet_address"/>

            <Button
                android:id="@+id/button_location_not_exist"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/bg_button_rounded_border"
                android:layout_marginTop="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/item_customer_location_button_text"
                android:textColor="@color/colorMaroon"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@id/image_view_coutlet_address"
                app:layout_constraintTop_toBottomOf="@id/text_view_outlet_address" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>