<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingEnd="0dp"
    android:paddingStart="24dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/text_view_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_title_text"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_code_outlet_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_outlet_code"/>

    <TextView
        android:id="@+id/text_view_outlet_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/detail_order_code_outlet_text"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detail"/>

    <View
        android:id="@+id/view_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/text_view_outlet_code"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_outlet_name_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_outlet_name"/>

    <TextView
        android:id="@+id/text_view_outlet_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/detail_order_outlet_name_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider1"
        tools:targetApi="o" />

    <View
        android:id="@+id/view_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/text_view_outlet_name"/>


    <CheckBox
        android:id="@+id/checbox_get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_order_get_location_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider2"/>

    <LinearLayout
        android:id="@+id/layout_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checbox_get_location">
        <fragment
            android:id="@+id/fragment_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <View
        android:id="@+id/view_divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/layout_map"/>


    <TextView
        android:id="@+id/text_view_full_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_order_full_address_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider3"/>

    <EditText
        android:id="@+id/edit_text_full_address_outlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/detail_order_full_address_hint"
        android:background="@null"
        android:hint="@string/detail_order_full_address_hint"
        android:inputType="text"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_full_address"
        tools:targetApi="o"/>

    <View
        android:id="@+id/view_divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/edit_text_full_address_outlet"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_village_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_village_name"/>

    <EditText
        android:id="@+id/edit_text_village_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/detail_order_village_text"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/detail_order_village_text"
        android:inputType="text"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider4"
        tools:targetApi="o"/>

    <View
        android:id="@+id/view_divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/edit_text_village_name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_sub_district_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_sub_district_name"/>

    <EditText
        android:id="@+id/edit_text_sub_district_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/detail_order_village_text"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/detail_order_sub_district_text"
        android:inputType="text"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider5"
        tools:targetApi="o"/>

    <View
        android:id="@+id/view_divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/edit_text_sub_district_name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_district_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_district_name"/>

    <EditText
        android:id="@+id/edit_text_district_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/detail_order_district_text"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/detail_order_district_text"
        android:inputType="text"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider6"
        tools:targetApi="o"/>

    <View
        android:id="@+id/view_divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/edit_text_district_name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_province_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_province_name"/>

    <EditText
        android:id="@+id/edit_text_province_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/detail_order_district_text"
        android:background="@null"
        android:gravity="end"
        android:hint="@string/detail_order_province_text"
        android:inputType="text"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider7"
        tools:targetApi="o"/>

    <View
        android:id="@+id/view_divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/edit_text_province_name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_order_grosir_text"
        android:textColor="@color/colorTextDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_grosir"/>

    <Spinner
        android:id="@+id/spinner_grosir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/list_grosir"
        android:gravity="end"
        android:paddingEnd="24dp"
        android:paddingStart="16dp"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider8" />

    <View
        android:id="@+id/view_divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/spinner_grosir"/>

</android.support.constraint.ConstraintLayout>