<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider"
    tools:context=".view.detail.DetailAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_photo_outlet"/>

        <include
            layout="@layout/view_detail_outlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:paddingEnd="0dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/text_view_detail_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_title_text"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_view_detail_owner_outlet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:hint="@string/detail_sub_title_text"
                android:textColor="@color/colorTextDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_detail_owner"
                tools:ignore="Autofill"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintTop_toBottomOf="@id/text_view_detail_owner_outlet"/>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <Button
                android:id="@+id/button_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/detail_save_text"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>